--- a/src/SCSS/Containers/PortfolioPage.scss
+++ b/src/SCSS/Containers/PortfolioPage.scss
@@ -55,7 +55,7 @@
     display: flex;
     flex-direction: column;
     flex-basis: 90vw;
-    max-width: 90%;
+    max-width: 100%;
     flex-grow: 0;
 }
 
@@ -132,6 +132,7 @@
         flex-direction: column-reverse;
         margin: 0;
         margin-bottom: 30px;
+        align-self: center;
     }
 
     .portfolio__game-presentation{
